got some things moving

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="styles/myStyles.css">
 </head>
 <body>
-	
+			<div id="scrollDiv"></div>
 				<div id="charaterLand">
 					<div id="sky"></div>
 					<div id="stars"></div>
