--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 					<div id="me"></div>
 				</div>	
 
-	
+	<script src="scripts/TweenMax.min.js"></script>
 	<script src="scripts/jquery.js"></script>
 	<script src="scripts/main.js"></script>	
 </body>
