--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Week7Paralax</title>
+	<link href="https://fonts.googleapis.com/css?family=Fredoka+One" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="styles/myStyles.css">
 </head>
 <body>
@@ -17,6 +18,16 @@
 					<div id="trees"></div>
 					<div id="grass"></div>
 					<div id="me"></div>
+					<div id="name">Brandon Sprinkles</div>
+					<div id="introText">Seeking a graphic design position!</div>
+					<div id ="edu">Education</div>
+					<div id="eduText">Currently pursuing a degree in interactive design at Nossi College of Art!</div>
+					<div id="workHist">Work History</div>
+					<div id="workHistText">2005-2014<p>Metro Health Department<p><p>
+					2014-2017<p>Tate Ornamental<p><p>2017-Current<p>Davita Healthcare
+					</div>
+					<div id ="Contact">Contact<p>bsprink@comcast.net</div>
+
 				</div>	
 
 	<script src="scripts/TweenMax.min.js"></script>
