can't figure out how to move text like I want

--- a/index.html
+++ b/index.html
@@ -18,15 +18,23 @@
 					<div id="trees"></div>
 					<div id="grass"></div>
 					<div id="me"></div>
+
 					<div id="name">Brandon Sprinkles</div>
+
 					<div id="introText">Seeking a graphic design position!</div>
+
 					<div id ="edu">Education</div>
+
 					<div id="eduText">Currently pursuing a degree in interactive design at Nossi College of Art!</div>
+
 					<div id="workHist">Work History</div>
-					<div id="workHistText">2005-2014<p>Metro Health Department<p><p>
-					2014-2017<p>Tate Ornamental<p><p>2017-Current<p>Davita Healthcare
+
+					<div id="workHistText">2005-2014: Metro Health Department<p>
+					2014-2017: Tate Ornamental<p>2017-Current: Davita Healthcare
 					</div>
-					<div id ="Contact">Contact<p>bsprink@comcast.net</div>
+					
+					<div id ="contact">Contact</div>
+					<div id ="email">bsprink@comcast.net</div>
 
 				</div>	
 
